@@ -14,7 +14,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class CartService {
@@ -31,7 +30,7 @@ public class CartService {
         this.productRepo = productRepo;
     }
 
-
+    @Transactional
     public String addToCart(String userName, Long productId, Integer productQty) throws ResourceNotFoundException, IllegalArgumentException {
         User user = userRepository.findByUsername(userName).orElseThrow(() -> new ResourceNotFoundException("User does not exist"));
 
@@ -79,7 +78,7 @@ public class CartService {
     public List<CartItemDTO> getCartItems(String userName) {
         User user = getUserByUsername(userName);
         Long userId = user.getId();
-        return getCartByUserId(userId).stream().map(this::convertToCartItemDTO).collect(Collectors.toList());
+        return getCartByUserId(userId).stream().map(this::convertToCartItemDTO).toList();
     }
 
     private User getUserByUsername(String userName) {
@@ -105,4 +104,13 @@ public class CartService {
         return cartRepo.findByUser_Id(userId);
     }
 
+    public String updateCartProductQuantity(Long cartId, Integer selectedProductQty) {
+        int affectedRow = cartRepo.updateProductQtyByCartId(cartId, selectedProductQty);
+
+        if (affectedRow == 1) {
+            return "Product quantity updated successfully.";
+        } else {
+            throw new ResourceNotFoundException("Cart not found with id: " + cartId);
+        }
+    }
 }
